# workmate-docs

./: .gitignore  404.html  CNAME  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  start_a_chat.md
.github/workflows/: deploy.yml
docs/: CNAME  how_to_signin.md  index.md  manage_chats.md  start_chat.md  support.md  updates.md
docs/styles/: custom.css
how_to_signin/: index.html
manage_chats/: index.html
search/: search_index.json
start_chat/: index.html
support/: index.html
updates/: index.html
